Add Expd2, be more rigorous with virtual keys.

--- a/README.org
+++ b/README.org
@@ -16,4 +16,4 @@ This repository contains a (relatively) stable, working-copy of my own personal 
 
 * A more useful project for most people
 
-This project will not be useful to most people since configuration is not accomplished via a GUI (and quite a bit is hardcoded based upon my specific setup). A more generalized project is at [[https://github.com/StevenTammen/keyboard-fu]]. In the near future, this other repository should contain GUI configuration and better documentation. In the near future, my focus will shift there until I achieve relative feature parity, at which point this repository will be refactored to be built using the tools in that repository.
+This project will not be useful to most people since configuration is not accomplished via a GUI (and quite a bit is hardcoded based upon my specific setup). A more generalized project is at [[https://github.com/StevenTammen/keyboard-fu]]. In the near future, this other repository should contain GUI configuration and better documentation. After finishing a few more things in this repository (to get the scripts to the point where I am using them full time), my focus will shift to the other repository until I achieve relative feature parity, at which point this repository will be refactored to be built using the tools in that repository.
